<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/add_team_padding"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_team" />

    <Button
        android:id="@+id/add_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_team"
        android:text="@string/add_score"/>

    <Button
        android:id="@+id/show_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_score"
        android:text="@string/show_statistics"/>

    <Button
        android:id="@+id/reset_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_statistics"
        android:text="@string/reset_statistics"/>
</LinearLayout>