<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_center_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_center_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <Spinner
        android:id="@+id/team1"
        android:layout_width="0dp"
        android:layout_height="@dimen/spinner_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline_center_left"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/team2"
        android:layout_width="0dp"
        android:layout_height="@dimen/spinner_height"
        app:layout_constraintLeft_toRightOf="@id/guideline_center_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/team1_score"
        android:layout_width="0dp"
        android:layout_height="@dimen/team_score_edit_text_height"
        android:layout_marginTop="@dimen/margin_top_team_name_edit_text"
        android:hint="@string/add_team_1_score"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline_center_left"
        app:layout_constraintTop_toBottomOf="@+id/team1" />

    <EditText
        android:id="@+id/team2_score"
        android:layout_width="0dp"
        android:layout_height="@dimen/team_score_edit_text_height"
        android:layout_marginTop="@dimen/margin_top_team_name_edit_text"
        android:hint="@string/add_team_2_score"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/guideline_center_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2" />

    <Button
        android:id="@+id/save_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_save_score_button"
        android:text="@string/save_teams_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team1_score" />
</android.support.constraint.ConstraintLayout>